--- a/src/app/modules/guide/pages/show-register/show-register.component.html
+++ b/src/app/modules/guide/pages/show-register/show-register.component.html
@@ -22,10 +22,10 @@
 
 </div>
 
-<div class="my-5 mx-3 text-center" style="padding-left:80px; padding-right:80px;">
+<div class="my-5 mx-3 text-center">
     <h1 class="pb-4"><b>Perks of being a Voila Guide</b></h1>
     <div class="row">
-        <div class="col-4 px-4">
+        <div class="col-md-4 shows">
             <div>
                 <mdb-icon far icon="smile-beam" size="2x"></mdb-icon>
             </div>
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-4 px-4">
+        <div class="col-md-4 shows">
             <div>
                 <mdb-icon fas icon="couch" size="2x"></mdb-icon>
             </div>
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-4 px-4">
+        <div class="col-md-4 shows">
             <div>
                 <mdb-icon fas icon="heart" size="2x"></mdb-icon>
             </div>
@@ -62,10 +62,10 @@
 
 </div>
 
-<div class="my-5 mx-3 text-center" style="padding-left:80px; padding-right:80px;">
+<div class="my-5 mx-3 text-center">
     <h1 class="pb-4"><b>What Voila offers you</b></h1>
     <div class="row">
-        <div class="col-4 px-4">
+        <div class="col-md-4 shows">
             <div>
                 <mdb-icon fas icon="check" size="2x" class="cyan-text" style="opacity:0.5;"></mdb-icon>
             </div>
@@ -76,7 +76,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-4 px-4">
+        <div class="col-md-4 shows">
             <div>
                 <mdb-icon fas icon="check" size="2x" class="cyan-text" style="opacity:0.5;"></mdb-icon>
             </div>
@@ -87,7 +87,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-4  px-4">
+        <div class="col-md-4 shows">
             <div>
                 <mdb-icon fas icon="check" size="2x" class="cyan-text" style="opacity:0.5;"></mdb-icon>
             </div>
@@ -104,7 +104,7 @@
 <div class="my-5 text-center bgclass white-text" style="padding:0 100px 45px 100px">
     <h1 class="py-4"><b>Let's get started!</b></h1>
     <div class="row pb-3">
-        <div class="col-4 px-3">
+        <div class="col-md-4 px-3">
             <div class="text-left" style=" position:relative; font-size:65px; font-weight: 800;">1
 
                 <strong style="position:absolute; top: 25%; font-size:30px; font-weight: 200;">Create your Voila account</strong>
@@ -115,13 +115,13 @@
             </div>
         </div>
 
-        <div class="col-4 px-3">
+        <div class="col-md-4 px-3">
             <div class="text-left" style=" position:relative; font-size:65px; font-weight: 800;">2
                 <strong style="position:absolute; font-size:30px; font-weight: 200;">Answer a simple questionnaire</strong>
             </div>
             <div style="font-size:18px;">We want to know more from you. It will help us get an idea of what you are really passionate about.</div>
         </div>
-        <div class="col-4 px-3">
+        <div class="col-md-4 px-3">
             <div class="text-left" style=" position:relative; font-size:65px; font-weight: 800;">3
                 <strong style="position:absolute; top: 25%; font-size:30px; font-weight: 200;">We’ll be in touch</strong>
             </div>
@@ -131,10 +131,10 @@
     <button mdbBtn type="button" (click)="navigateToRegisterPage()" rounded="true" style=" border-radius: 25px; text-transform:none; font-size: 17px;" class="white cyan-text font-weight-bold" mdbWavesEffect>Register as a Voila Guide</button>
 </div>
 
-<div class="my-5 mx-3 text-center" style="padding-left:80px; padding-right:80px;">
+<div class="my-5 mx-3 text-center">
     <h1 class="pb-4"><b>Your Voila options</b></h1>
     <div class="row">
-        <div class="col-4 px-4">
+        <div class="col-md-4 shows">
             <div>
                 <strong style="font-size:20px;">Voila Originals</strong>
                 <div>
@@ -142,7 +142,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-4 px-4">
+        <div class="col-md-4 shows">
             <div>
                 <strong style="font-size:20px;">Personal host offers</strong>
                 <div>
@@ -150,7 +150,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-4  px-4">
+        <div class="col-md-4  shows">
             <div>
                 <strong style="font-size:20px;">Best of both worlds</strong>
                 <div>
