--- a/src/app/modules/tourists/components/favourites/favourites.component.scss
+++ b/src/app/modules/tourists/components/favourites/favourites.component.scss
@@ -4,10 +4,33 @@
     top: 20px;
 }
 
-.bgclass {
-    background-image: linear-gradient(to right, #22c1c3, #fdbb2d);
+.headup {
+    font-family: 'Staatliches', cursive;
+    word-spacing: 0.8rem;
 }
 
+@media (min-width: 576px) {
+    .headup {
+        font-size: 43px;
+    }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    .headup {
+        font-size: 50px;
+    }
+    .gap {
+        margin: auto 3rem;
+    }
+}
+
+// .bgclass {
+//     background-image: linear-gradient(to right, #22c1c3, #fdbb2d);
+// }
 .guide-contain {
     margin-left: 110px !important;
     margin-right: 0 !important;
