--- a/src/app/modules/guide/pages/show-register/show-register.component.scss
+++ b/src/app/modules/guide/pages/show-register/show-register.component.scss
@@ -33,3 +33,9 @@
     background: rgb(32, 185, 187);
     background: linear-gradient(241deg, rgba(32, 185, 187, 1) 3%, rgba(51, 228, 208, 1) 100%);
 }
+
+@media (max-width: 767px) {
+    .shows {
+        padding: 2em 0 2em 0;
+    }
+}
