--- a/src/app/shared/components/login-page/login-page.component.html
+++ b/src/app/shared/components/login-page/login-page.component.html
@@ -158,54 +158,53 @@
 <div class="small-screen">
   <div class="login-wrap1">
 	<div class="login-html1">
-		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
-		<input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
+		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Guide</label>
+		<input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Tourist</label>
 		<div class="login-form1">
-			<div class="sign-in-htm">
-				<div class="group1">
-					<label for="user" class="label">Username</label>
-					<input id="user" type="text" class="input">
-				</div>
-				<div class="group1">
-					<label for="pass" class="label">Password</label>
-					<input id="pass" type="password" class="input" data-type="password">
-				</div>
+			<div class="sign-in-htm1" [formGroup]="LoginForm" autocomplete="off">
+        <div class="group1">
+          <label for="form1" class="label">Email</label>
+          <input mdbInput type="email" formControlName="email" id="form1" class="input">
+
+          <small *ngIf="f.email.value == '' && (f.email.dirty || f.email.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small>
+      </div>
+      <div class="group1">
+        <label for="form2" class="label">password</label>
+          <input mdbInput type="password" formControlName="password" id="form2" class="input">
+
+          <small *ngIf="f.password.value == '' && (f.password.dirty || f.password.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small>
+      </div>
 				<div class="group1">
 					<input id="check" type="checkbox" class="check" checked>
 					<label for="check"><span class="icon"></span> Keep me Signed in</label>
 				</div>
 				<div class="group1">
-					<input type="submit" class="button" value="Sign In">
+					<input type="submit" class="button" (click)="login('guide')" value="Sign In">
 				</div>
 				<div class="hr"></div>
-				<div class="foot-lnk1">
-					<a href="#forgot">Forgot Password?</a>
-				</div>
 			</div>
 			<div class="sign-up-htm1">
-				<div class="group1">
-					<label for="user" class="label">Username</label>
-					<input id="user" type="text" class="input">
+        <form [formGroup]="LoginForm" class="more-padding" autocomplete="off">
+        <div class="group1">
+          <label for="form1" class="label">Email</label>
+          <input mdbInput type="email" formControlName="email" id="form1" class="input">
+
+          <small *ngIf="f.email.value == '' && (f.email.dirty || f.email.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small>
+      </div>
+      <div class="group1">
+        <label for="form2" class="label">password</label>
+          <input mdbInput type="password" formControlName="password" id="form2" class="input">
+
+          <small *ngIf="f.password.value == '' && (f.password.dirty || f.password.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small>
+      </div>
+        <div class="group1">
+					<input id="check" type="checkbox" class="check" checked>
+					<label for="check"><span class="icon"></span> Keep me Signed in</label>
 				</div>
 				<div class="group1">
-					<label for="pass" class="label">Password</label>
-					<input id="pass" type="password" class="input" data-type="password">
+					<input type="submit" class="button" (click)="login('tourist')" value="Sign In">
 				</div>
-				<div class="group1">
-					<label for="pass" class="label">Repeat Password</label>
-					<input id="pass" type="password" class="input" data-type="password">
-				</div>
-				<div class="group1">
-					<label for="pass" class="label">Email Address</label>
-					<input id="pass" type="text" class="input">
-				</div>
-				<div class="group1">
-					<input type="submit" class="button" value="Sign Up">
-				</div>
-				<div class="hr"></div>
-				<div class="foot-lnk1">
-					<label for="tab-1">Already Member?</label>
-				</div>
+				<div class="hr"></div></form>
 			</div>
 		</div>
 	</div>
