--- a/src/app/shared/components/login-page/login-page.component.scss
+++ b/src/app/shared/components/login-page/login-page.component.scss
@@ -228,9 +228,7 @@ label {
     letter-spacing: 1px;
 }
 // login second
-
-@media (max-width: 800px){
-  *,:after,:before{box-sizing:border-box}
+*,:after,:before{box-sizing:border-box}
   .clearfix:after,.clearfix:before{content:'';display:table}
   .clearfix:after{clear:both;display:block}
   a{color:inherit;text-decoration:none}
@@ -251,8 +249,8 @@ label {
     padding:90px 70px 50px 70px;
     background:rgba(40,57,101,.9);
   }
-  .login-html1 .sign-in-htm,
-  .login-html1 .sign-up-htm{
+  .login-html1 .sign-in-htm1,
+  .login-html1 .sign-up-htm1{
     top:0;
     left:0;
     right:0;
@@ -265,7 +263,7 @@ label {
   }
   .login-html1 .sign-in,
   .login-html1 .sign-up,
-  .login-form1 .group1:checked
+  .login-form1 .group1 .check
   {
     display:none;
   }
@@ -361,10 +359,10 @@ label {
   .login-form1 .group1 .check:checked + label .icon:after{
     transform:scale(1) rotate(-45deg);
   }
-  .login-html1 .sign-in:checked + .tab + .sign-up + .tab + .login-form1 .sign-in-htm{
+  .login-html1 .sign-in:checked + .tab + .sign-up + .tab + .login-form1 .sign-in-htm1{
     transform:rotate(0);
   }
-  .login-html1 .sign-up:checked + .tab + .login-form1 .sign-up-htm{
+  .login-html1 .sign-up:checked + .tab + .login-form1 .sign-up-htm1{
     transform:rotate(0);
   }
 
@@ -376,11 +374,16 @@ label {
   .foot-lnk1{
     text-align:center;
   }
+@media (max-width: 800px){
+
   .large-screen{
     display: none;
   }
   .small-screen{
     display: block;
+  }
+  form{
+    all: unset;
   }
 }
 @media (min-width: 800px){
