front page complete

--- a/src/app/modules/home/features/features.component.html
+++ b/src/app/modules/home/features/features.component.html
@@ -1,86 +1,28 @@
-<!-- <div class="skw-pages">
-  <div class="skw-page skw-page-1 active">
-    <div class="skw-page__half skw-page__half--left">
-      <div class="skw-page__skewed">
-        <div class="skw-page__content"></div>
-      </div>
-    </div>
-    <div class="skw-page__half skw-page__half--right">
-      <div class="skw-page__skewed">
-        <div class="skw-page__content">
-          <h2 class="skw-page__heading">Skewed One Page Scroll</h2>
-          <p class="skw-page__description">Just scroll down</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</div>
-<div class="skw-pages">
-  <div class="skw-page skw-page-1 active">
-    <div class="skw-page__half skw-page__half--left">
-      <div class="skw-page__skewed">
-        <div class="skw-page__content"></div>
-      </div>
-    </div>
-    <div class="skw-page__half skw-page__half--right">
-      <div class="skw-page__skewed">
-        <div class="skw-page__content">
-          <h2 class="skw-page__heading">Skewed One Page Scroll</h2>
-          <p class="skw-page__description">Just scroll down</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</div> -->
 <!-- Card test -->
 <section id="timeline">
-
-
   <div class="tl-item">
-
     <div class="tl-bg" style="background-image: url(https://placeimg.com/1002/1002/nature)"></div>
-
     <div class="tl-year">
-      <p class="f2 heading--sanSerif">As Tourist</p>
+      <p class="f2 heading--sanSerif">Tourist</p>
     </div>
-
     <div class="tl-content">
       <h1 class="f3 text--accent ttu">Join <b>Voila</b> as Tourist</h1>
       <p>Suspendisse potenti. Sed sollicitudin eros lorem, eget accumsan risus dictum id. Maecenas dignissim ipsum vel mi rutrum egestas. Donec mauris nibh, facilisis ut hendrerit vel, fringilla sed felis. Morbi sed nisl et arcu.</p>
       <button [routerLink]="['/login/tourist']" mdbBtn type="button" color="transparent" mdbWavesEffect>Sign In</button>
       <button [routerLink]="['/tourists/register']" mdbBtn type="button"  mdbWavesEffect>Sign Up</button>
-
     </div>
-
   </div>
 
-
-
   <div class="tl-item">
-
     <div class="tl-bg" style="background-image: url(https://placeimg.com/1000/1000/nature)"></div>
-
     <div class="tl-year">
-      <p class="f2 heading--sanSerif">As Guide</p>
+      <p class="f2 heading--sanSerif">Guide</p>
     </div>
-
     <div class="tl-content">
       <h1 class="f3 text--accent ttu">Join <b>Voila</b> as Guide</h1>
       <p>Suspendisse ac mi at dolor sodales faucibus. Nunc sagittis ornare purus non euismod. Donec vestibulum efficitur tortor, eget efficitur enim facilisis consequat. Vivamus laoreet laoreet elit. Ut ut varius metus, bibendum imperdiet ex. Curabitur diam quam, blandit at risus nec, pulvinar porttitor lorem. Pellentesque dolor elit.</p>
       <button [routerLink]="['/login/guide']" mdbBtn type="button"  mdbWavesEffect>Sign In</button>
       <button [routerLink]="['/guide/show-register']" mdbBtn type="button" mdbWavesEffect>Sign Up</button>
     </div>
-
   </div>
 </section>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<!--Section: Features v.4-->
