--- a/src/app/modules/home/top-cities/top-cities.component.html
+++ b/src/app/modules/home/top-cities/top-cities.component.html
@@ -1,43 +1,12 @@
-<!-- <owl-carousel-o [options]="customOptions">
-  <ng-template carouselSlide>
-      <div class="slide">
-          <img src="https://i.picsum.photos/id/905/400/300.jpg">
-      </div>
-  </ng-template>
-  <ng-template carouselSlide>
-      <div class="slide">
-          <img src="https://i.picsum.photos/id/507/400/300.jpg">
-      </div>
-  </ng-template>
-  <ng-template carouselSlide>
-      <div class="slide">
-          <img src="https://i.picsum.photos/id/609/400/300.jpg">
-      </div>
-  </ng-template>
-  <ng-template carouselSlide>
-      <div class="slide">
-          <img src="https://i.picsum.photos/id/995/400/300.jpg">
-      </div>
-  </ng-template>
-  <ng-template carouselSlide>
-      <div class="slide">
-          <img src="https://i.picsum.photos/id/1054/400/300.jpg">
-      </div>
-  </ng-template>
-</owl-carousel-o> -->
-
-<div class=" large-screen row mx-5 my-4">
-    <div class=" col-md-3">
+<div class=" row px-3 py-4 bg">
+    <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-3 my-3">
         <div class="trending px-2">
-            <div>TRENDING</div>
-            <div>DESTINATIONS</div>
+            TRENDINGs DESTINATIONS
         </div>
     </div>
-    <div class="col-md-9">
+    <div class=" col-12 col-sm-12 col-md-12 col-lg-8 col-xl-9 my-3">
         <div class="row">
-
-
-            <div class="col-md-4">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-3">
                 <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
                     <mdb-card-body class="waves-effect waves-light">
                         <div class="white-text">
@@ -56,7 +25,7 @@
                     </mdb-card-body>
                 </mdb-card>
             </div>
-            <div class="col-md-4">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-34 col-xl-3 mb-3">
                 <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
                     <mdb-card-body class="waves-effect waves-light">
                         <div class="white-text">
@@ -75,7 +44,26 @@
                     </mdb-card-body>
                 </mdb-card>
             </div>
-            <div class="col-md-4">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-3">
+                <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
+                    <mdb-card-body class="waves-effect waves-light">
+                        <div class="white-text">
+                            <mdb-card-title>
+                                <h4>Jaipur, Rajasthan</h4>
+                            </mdb-card-title>
+                            <mdb-card-text class="white-text">Offer By Guide: <a class="white-text" href="#!">Arjun Gupta</a>
+                                <div>Explore the cultural delight in <b>3 days and 2 nights</b></div>
+                            </mdb-card-text>
+                            <div class="text-center">
+                                <!-- <a class="card-link"><span><i class="far fa-heart"></i></span> </a> -->
+                                <a class="card-link p-2" style="border:1px solid white; ">View More</a>
+                            </div>
+                        </div>
+
+                    </mdb-card-body>
+                </mdb-card>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-3 d-bock d-md-none d-xl-block">
                 <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
                     <mdb-card-body class="waves-effect waves-light">
                         <div class="white-text">
@@ -96,74 +84,4 @@
             </div>
         </div>
     </div>
-</div>
-<!-- /// -->
-
-<div class=" small-screen mx-5 my-4">
-      <div class="trending px-2">
-          <div>TRENDINGs</div>
-          <div>DESTINATIONS</div>
-      </div>
-
-      <div class="row">
-
-
-          <div class="col-md-4 m-3">
-              <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
-                  <mdb-card-body class="waves-effect waves-light">
-                      <div class="white-text">
-                          <mdb-card-title>
-                              <h4>Jaipur, Rajasthan</h4>
-                          </mdb-card-title>
-                          <mdb-card-text class="white-text">Offer By Guide: <a class="white-text" href="#!">Arjun Gupta</a>
-                              <div>Explore the cultural delight in <b>3 days and 2 nights</b></div>
-                          </mdb-card-text>
-                          <div class="text-center">
-                              <!-- <a class="card-link"><span><i class="far fa-heart"></i></span> </a> -->
-                              <a class="card-link p-2" style="border:1px solid white; ">View More</a>
-                          </div>
-                      </div>
-
-                  </mdb-card-body>
-              </mdb-card>
-          </div>
-          <div class="col-md-4 m-3">
-              <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
-                  <mdb-card-body class="waves-effect waves-light">
-                      <div class="white-text">
-                          <mdb-card-title>
-                              <h4>Jaipur, Rajasthan</h4>
-                          </mdb-card-title>
-                          <mdb-card-text class="white-text">Offer By Guide: <a class="white-text" href="#!">Arjun Gupta</a>
-                              <div>Explore the cultural delight in <b>3 days and 2 nights</b></div>
-                          </mdb-card-text>
-                          <div class="text-center">
-                              <!-- <a class="card-link"><span><i class="far fa-heart"></i></span> </a> -->
-                              <a class="card-link p-2" style="border:1px solid white; ">View More</a>
-                          </div>
-                      </div>
-
-                  </mdb-card-body>
-              </mdb-card>
-          </div>
-          <div class="col-md-4 m-3">
-              <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
-                  <mdb-card-body class="waves-effect waves-light">
-                      <div class="white-text">
-                          <mdb-card-title>
-                              <h4>Jaipur, Rajasthan</h4>
-                          </mdb-card-title>
-                          <mdb-card-text class="white-text">Offer By Guide: <a class="white-text" href="#!">Arjun Gupta</a>
-                              <div>Explore the cultural delight in <b>3 days and 2 nights</b></div>
-                          </mdb-card-text>
-                          <div class="text-center">
-                              <!-- <a class="card-link"><span><i class="far fa-heart"></i></span> </a> -->
-                              <a class="card-link p-2" style="border:1px solid white; ">View More</a>
-                          </div>
-                      </div>
-
-                  </mdb-card-body>
-              </mdb-card>
-          </div>
-      </div>
 </div>
