--- a/src/app/modules/home/frontpage/frontpage.component.html
+++ b/src/app/modules/home/frontpage/frontpage.component.html
@@ -1,26 +1,31 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-12">
+      <app-home-carousel></app-home-carousel>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
       <app-filter-form></app-filter-form>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-12">
       <app-top-cities></app-top-cities>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-12">
       <app-top-deals></app-top-deals>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-12" style="overflow: hidden; width: inherit;" >
+    <div class="col-12">
       <app-map></app-map>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-12 d-none d-sm-block">
       <app-features></app-features>
     </div>
   </div>
