--- a/src/app/modules/home/map/map.component.scss
+++ b/src/app/modules/home/map/map.component.scss
@@ -1,7 +1,9 @@
-.map-main{
-    justify-content: center;
-    text-align: center;
-}
+// .map-main{
+//     justify-content: center;
+//     text-align: center;
+//     width: 100%;
+//     height: 100%;
+// }
 .state{
     fill: #ffffff;
     stroke: rgb(56,50,48);
@@ -21,12 +23,13 @@
 }
 .row{
   background-color: rgb(0, 0, 0);
+  margin: 0;
 }
-.col-md-6{
-  padding: 0px;
-}
-@media screen and (max-width: 900px){
-  .map{
-    display: none;
-  }
-}
+// .col-md-6{
+//   padding: 0px;
+// }
+// @media screen and (max-width: 900px){
+//   .map{
+//     display: none;
+//   }
+// }
