tourist regiter page

--- a/src/app/modules/tourists/pages/register/register.component.html
+++ b/src/app/modules/tourists/pages/register/register.component.html
@@ -1,6 +1,6 @@
-<div class="bg mt-0 pt-0">
-  <br><br><br>
-    <div class="card register-card mx-auto my-auto">
+<div class="bg mt-0 p-0 p-md-5">
+
+    <div class="card register-card m-5 mx-auto my-auto w-auto w-lg-100">
         <div class="row">
             <div class="col-12 p-5">
                 <!-- Card content -->
@@ -127,7 +127,7 @@
         <!-- Card -->
     </div>
 
-    <br><br><br>
+
 
 </div>
 <!-- <div class="card mx-auto my-3" style="width:950px">
