--- a/src/app/modules/tourists/components/bookings/bookings.component.html
+++ b/src/app/modules/tourists/components/bookings/bookings.component.html
@@ -1,7 +1,3 @@
-
-
-
-
 <!-- <table class="table">
     <thead class="black white-text">
       <tr>
@@ -96,7 +92,7 @@
 
             </div>
             <!-- <div>Booking Date: March 25,2020</div> -->
-         </div>
+        </div>
 
     </mdb-card-body>
     <mdb-card-footer class="text-muted" style="height: 53px;">
@@ -106,69 +102,70 @@
 </mdb-card>
 
 <!-- <mdb-card> -->
-    <!--Card content-->
+<!--Card content-->
 
-    <!--  -->
+<!--  -->
 
-   <mdb-card class="mb-3" *ngFor="let booking of bookingsList">
-      <mdb-card>
-          <mdb-card-body>
-              <div class="row">
-                  <div class="col-md-9">
-                   <mdb-card-title>
-                <h4><mdb-icon fas icon="suitcase" style="color: rgba(233, 30, 99, 0.7);" ></mdb-icon> &nbsp; {{booking.guideId?.city}}, India with {{booking.guideId?.name}}</h4>
-              </mdb-card-title> </div>
-              <div class="col-md-3" style="padding: 0;">
-                <button mdbBtn type="button" size="sm" color="pink" style="margin-top: -6px;" (click)="contactGuide(booking.guideId.email)" mdbWavesEffect>Contact Guide</button>
-              </div>
+<mdb-card class="my-3" *ngFor="let booking of bookingsList">
+    <mdb-card>
+        <mdb-card-body>
+            <div class="row">
+                <div class="col-md-9">
+                    <mdb-card-title>
+                        <h4>
+                            <mdb-icon fas icon="suitcase" style="color: rgba(233, 30, 99, 0.7);"></mdb-icon> &nbsp; {{booking.guideId?.city}}, India with {{booking.guideId?.name}}</h4>
+                    </mdb-card-title>
+                </div>
+                <div class="col-md-3" style="padding: 0;">
+                    <button mdbBtn type="button" size="sm" color="pink" style="margin-top: -6px;" (click)="contactGuide(booking.guideId.email)" mdbWavesEffect>Contact Guide</button>
+                </div>
 
-        </div>
-              <!--Text-->
-              <mdb-card-text>
-                  Approved booking by the guide under Voils <a href="">terms and condition</a> contact your
-                  guide for any booking related quary.
-
-                  <p>{{booking.places.toString()}}</p>
-                  <p class="mb-0"><a style="color: rgba(233, 30, 99, 0.7);" (click)="test1.toggle()">View more</a></p>
-
-              </mdb-card-text>
-
-
-  </mdb-card-body>
-      </mdb-card>
-  <div mdbCollapse [isCollapsed]="true" #test1="bs-collapse">
-      <mdb-card>
-    <mdb-card-body >
-        <!--Text-->
-        <mdb-card-text>
-          <div class="row">
-              <div class="col-md-4">
-                 <h5>From</h5> {{booking.startDate | date: 'dd-MM-yy'}}
-              </div>
-              <div class="col-md-4">
-                <h5>To</h5> {{booking.endDate | date: 'dd-MM-yy'}}
             </div>
-            <div class="col-md-4">
-                 <h5>Tour Type</h5> {{booking.tourType}}
-            </div>
+            <!--Text-->
+            <mdb-card-text>
+                Approved booking by the guide under Voils <a href="">terms and condition</a> contact your guide for any booking related quary.
 
-          </div>
-          <br>
-          <div class="row">
-            <div class="col-md-4">
-               <h5>Guide</h5> {{booking.guideId?.name}}
-            </div>
-            <div class="col-md-4">
-              <h5>Price</h5>  INR {{booking.price}}/person
-          </div>
-          <div class="col-md-4">
-               <h5>People</h5> <i class="fas fa-user-friends"></i> {{booking.noOfPeople}}
-          </div>
+                <p>{{booking.places.toString()}}</p>
+                <p class="mb-0"><a style="color: rgba(233, 30, 99, 0.7);" (click)="test1.toggle()">View more</a></p>
 
-        </div>
+            </mdb-card-text>
 
-      </mdb-card-text>
-      </mdb-card-body>
+
+        </mdb-card-body>
     </mdb-card>
-  </div>
-    </mdb-card>
+    <div mdbCollapse [isCollapsed]="true" #test1="bs-collapse">
+        <mdb-card>
+            <mdb-card-body>
+                <!--Text-->
+                <mdb-card-text>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <h5>From</h5> {{booking.startDate | date: 'dd-MM-yy'}}
+                        </div>
+                        <div class="col-md-4">
+                            <h5>To</h5> {{booking.endDate | date: 'dd-MM-yy'}}
+                        </div>
+                        <div class="col-md-4">
+                            <h5>Tour Type</h5> {{booking.tourType}}
+                        </div>
+
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <h5>Guide</h5> {{booking.guideId?.name}}
+                        </div>
+                        <div class="col-md-4">
+                            <h5>Price</h5> INR {{booking.price}}/person
+                        </div>
+                        <div class="col-md-4">
+                            <h5>People</h5> <i class="fas fa-user-friends"></i> {{booking.noOfPeople}}
+                        </div>
+
+                    </div>
+
+                </mdb-card-text>
+            </mdb-card-body>
+        </mdb-card>
+    </div>
+</mdb-card>
