--- a/src/app/modules/home/top-cities/top-cities.component.html
+++ b/src/app/modules/home/top-cities/top-cities.component.html
@@ -1,7 +1,7 @@
 <div class=" row px-3 py-4 bg">
     <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-3 my-3">
         <div class="trending px-2">
-            TRENDINGs DESTINATIONS
+            TRENDING DESTINATIONS
         </div>
     </div>
     <div class=" col-12 col-sm-12 col-md-12 col-lg-8 col-xl-9 my-3">
@@ -25,7 +25,7 @@
                     </mdb-card-body>
                 </mdb-card>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-34 col-xl-3 mb-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-3">
                 <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
                     <mdb-card-body class="waves-effect waves-light">
                         <div class="white-text">
