--- a/src/app/modules/tourists/components/edit-profile/edit-profile.component.html
+++ b/src/app/modules/tourists/components/edit-profile/edit-profile.component.html
@@ -1,7 +1,7 @@
-<div class="card py-5 px-5">
+<div class="card py-5 px-5 mx-lg-5">
     <div class="card-body px-0 py-0">
         <div class="card-title">
-            <h2><b>Edit Profile</b></h2>
+            <h1 class="editup">Edit Profile</h1>
         </div>
     </div>
     <hr class="mt-0">
