--- a/src/app/shared/components/change-password/change-password.component.scss
+++ b/src/app/shared/components/change-password/change-password.component.scss
@@ -1,6 +1,6 @@
 .bg {
-    flex-wrap: wrap;
-    display: flex;
+    // flex-wrap: wrap;
+    // display: flex;
     vertical-align: middle;
     align-items: center;
     width: 100%;
