--- a/src/app/shared/components/change-password/change-password.component.html
+++ b/src/app/shared/components/change-password/change-password.component.html
@@ -1,36 +1,49 @@
 <div class="bg">
-  <div class="card w-75 px-5 py-5">
-    <form [formGroup]="changePwd" (ngSubmit)="submitForm()">
-      <div class=" card-body">
-        <div class="card-title"><h3>Change Password</h3></div>
-        <div class="form-group">
-        <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
-        <label for="form2">Current Password</label>
-        <input type="password" id="form2" formControlName="oldPassword" class="form-control">
-        
-      </div>
-      <div class="form-group">
-        <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
-        <label for="form2">New Password</label>
-        <input type="password" id="form2" formControlName="newPassword" class="form-control">
-        
-      </div>
-      
-      <div class="form-group">
-        <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
-        <label for="form2">Confirm Password</label>
-        <input type="password" id="form2" formControlName="confirmPassword" class="form-control">
-        
-      </div>
+    <div class="row">
+        <div class="col-sm-2 col-md-3 col-lg-3 col-xl-4">
 
-      <div class="form-group">
-        <button type="submit" class="btn btn-success">
-          Change  <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
-        </button>
+        </div>
+        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-4">
+            <div class="card px-2 py-3 px-md-3 px-lg-4">
+                <form [formGroup]="changePwd" (ngSubmit)="submitForm()">
+                    <div class=" card-body">
+                        <div class="card-title">
+                            <h3>Change Password</h3>
+                        </div>
+                        <div class="md-form">
+                            <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
+                            <label for="first">Current Password</label>
+                            <input mdbInput type="password" id="first" formControlName="oldPassword" class="form-control">
 
-      </div>
-      </div>
-    </form>
-    
-  </div>
+                        </div>
+                        <div class="md-form">
+                            <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
+                            <label for="form2">New Password</label>
+                            <input mdbInput type="password" id="form2" formControlName="newPassword" class="form-control">
+
+                        </div>
+
+                        <div class="md-form">
+                            <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
+                            <label for="form3">Confirm Password</label>
+                            <input mdbInput type="password" id="form3" formControlName="confirmPassword" class="form-control">
+
+                        </div>
+
+                        <div class="form-group text-center">
+                            <button type="submit" class="btn btn-success">
+                    Done  <mdb-icon fas icon="check"></mdb-icon>
+                  </button>
+
+                        </div>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+        <div class="col-sm-2 col-md-3 col-lg-3 col-xl-4">
+
+        </div>
+    </div>
+
 </div>
