--- a/src/app/modules/home/top-cities/top-cities.component.html
+++ b/src/app/modules/home/top-cities/top-cities.component.html
@@ -6,77 +6,37 @@
     </div>
     <div class=" col-12 col-sm-12 col-md-12 col-lg-8 col-xl-9 my-3">
         <div class="row">
-            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-3"
+                *ngFor="let place of topCitiesList | slice:0:3">
                 <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
                     <mdb-card-body class="waves-effect waves-light">
                         <div class="white-text">
                             <mdb-card-title>
-                                <h4>Jaipur, Rajasthan</h4>
+                                <h4>{{place.place}}</h4>
                             </mdb-card-title>
-                            <mdb-card-text class="white-text">Offer By Guide: <a class="white-text" href="#!">Arjun Gupta</a>
-                                <div>Explore the cultural delight in <b>3 days and 2 nights</b></div>
+                            <mdb-card-text >
+                                <b>{{place.city}}, {{place.state}}</b>
+                                <p>{{place.description | truncatetext}}</p>
                             </mdb-card-text>
-                            <div class="text-center">
-                                <!-- <a class="card-link"><span><i class="far fa-heart"></i></span> </a> -->
-                                <a class="card-link p-2" style="border:1px solid white; ">View More</a>
-                            </div>
                         </div>
 
                     </mdb-card-body>
                 </mdb-card>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-34 col-xl-3 mb-3">
+            
+        
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-3 d-block d-md-none d-xl-block"
+                *ngFor="let place of topCitiesList | slice:3:4">
                 <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
                     <mdb-card-body class="waves-effect waves-light">
                         <div class="white-text">
                             <mdb-card-title>
-                                <h4>Jaipur, Rajasthan</h4>
+                                <h4>{{place.place}}</h4>
                             </mdb-card-title>
-                            <mdb-card-text class="white-text">Offer By Guide: <a class="white-text" href="#!">Arjun Gupta</a>
-                                <div>Explore the cultural delight in <b>3 days and 2 nights</b></div>
+                            <mdb-card-text >
+                                <b>{{place.city}}, {{place.state}}</b>
+                                <p>{{place.description | truncatetext}}</p>
                             </mdb-card-text>
-                            <div class="text-center">
-                                <!-- <a class="card-link"><span><i class="far fa-heart"></i></span> </a> -->
-                                <a class="card-link p-2" style="border:1px solid white; ">View More</a>
-                            </div>
-                        </div>
-
-                    </mdb-card-body>
-                </mdb-card>
-            </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-3">
-                <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
-                    <mdb-card-body class="waves-effect waves-light">
-                        <div class="white-text">
-                            <mdb-card-title>
-                                <h4>Jaipur, Rajasthan</h4>
-                            </mdb-card-title>
-                            <mdb-card-text class="white-text">Offer By Guide: <a class="white-text" href="#!">Arjun Gupta</a>
-                                <div>Explore the cultural delight in <b>3 days and 2 nights</b></div>
-                            </mdb-card-text>
-                            <div class="text-center">
-                                <!-- <a class="card-link"><span><i class="far fa-heart"></i></span> </a> -->
-                                <a class="card-link p-2" style="border:1px solid white; ">View More</a>
-                            </div>
-                        </div>
-
-                    </mdb-card-body>
-                </mdb-card>
-            </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-3 d-bock d-md-none d-xl-block">
-                <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
-                    <mdb-card-body class="waves-effect waves-light">
-                        <div class="white-text">
-                            <mdb-card-title>
-                                <h4>Jaipur, Rajasthan</h4>
-                            </mdb-card-title>
-                            <mdb-card-text class="white-text">Offer By Guide: <a class="white-text" href="#!">Arjun Gupta</a>
-                                <div>Explore the cultural delight in <b>3 days and 2 nights</b></div>
-                            </mdb-card-text>
-                            <div class="text-center">
-                                <!-- <a class="card-link"><span><i class="far fa-heart"></i></span> </a> -->
-                                <a class="card-link p-2" style="border:1px solid white; ">View More</a>
-                            </div>
                         </div>
 
                     </mdb-card-body>
