--- a/src/app/modules/home/top-deals/top-deals.component.html
+++ b/src/app/modules/home/top-deals/top-deals.component.html
@@ -9,108 +9,31 @@
                     </div>
                     <div class="col-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 deal-text">
                         <!-- <h1>Select from our hot deals</h1> -->
-                    
                         <h1><p>select from wide range of hand picked deals by our experts and explore the world with us
                         through our selected hot deals
                         </p></h1>
-                        
                         <mdb-carousel class="carousel slide carousel-fade pb-5 pt-3" [type]="'carousel-thumbnails'" [animation]="'fade'">
                             <div class="row cust-grid">
-                                <div class="col-11 col-sm-9 col-md-8 col-lg-9 col-xl-9">
-                                    <mdb-carousel-item>
+                                <div class="col-11 col-sm-9 col-md-8 col-lg-8 col-xl-8">
+                                    <mdb-carousel-item *ngFor="let deal of hotDealsList | slice:0:5">
                                         <div class="card deal-card">
                                             <div class="row">
                                                 <div class="col-4">
-                                                    
                                                     <img class="deal-img card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="" height="100%" width="100%">
                                                 </div>
-                                    
                                                 <div class="col-8 pl-3">
-                                                    
                                                     <div class="card-body">
-                                    
-                                                        
-                                                        <h2 class="card-title"><strong>Darjeeling City Tour</strong></h2>
-                                                        
+                                                        <h3 class="card-title"><strong>{{deal.dealId?.city | titlecase}} City Tour</strong></h3>
                                                         <hr class="px-3 py-0 ml-0" style="width:60px; border-top: 1px solid deeppink;">
                                                         <div class="card-text mt-0 pt-0 black-text">
-                                                        
-                                                            <div><i class="far fa-calendar-alt"></i> 2 days tour</div>
-                                                            <div>Choose your guide from 8+ local guides</div>
-                                    
+                                                            <div>
+                                                                <p><i class="far fa-calendar-alt"></i> From: <b>{{deal.dealId?.startDate | date: 'short'}}</b> &nbsp; To: <b>{{deal.dealId?.endDate | date: 'short'}}</b></p>
+                                                            </div>
+                                                            <h5 class="text-right">In only Rs. <b>{{deal.dealId?.price}}</b>/-</h5>
                                                         </div>
-                                                        
-                                    
                                                     </div>
                                                 </div>
                                             </div>
-                                    
-                                            <!-- <a href="https://mdbootstrap.com/education/bootstrap/quick-start/" class="stretched-link text-right  pb-0 mb-3 px-3 text-decoration-none"><strong>Know More</strong></a> -->
-                                    
-                                        </div>
-                                      </mdb-carousel-item>
-                                      <mdb-carousel-item>
-                                        <div class="card deal-card">
-                                            <div class="row">
-                                                <div class="col-4">
-                                                    
-                                                    <img class="deal-img card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="" height="100%" width="100%">
-                                                </div>
-                                    
-                                                <div class="col-8 pl-3">
-                                                    
-                                                    <div class="card-body">
-                                    
-                                                        
-                                                        <h2 class="card-title"><strong>Darjeeling City Tour</strong></h2>
-                                                        
-                                                        <hr class="px-3 py-0 ml-0" style="width:60px; border-top: 1px solid deeppink;">
-                                                        <div class="card-text mt-0 pt-0 black-text">
-                                                        
-                                                            <div><i class="far fa-calendar-alt"></i> 3 days tour</div>
-                                                            <div>Choose your guide from 8+ local guides</div>
-                                    
-                                                        </div>
-                                                        
-                                    
-                                                    </div>
-                                                </div>
-                                            </div>
-                                    
-                                            <!-- <a href="https://mdbootstrap.com/education/bootstrap/quick-start/" class="stretched-link text-right  pb-0 mb-3 px-3 text-decoration-none"><strong>Know More</strong></a> -->
-                                    
-                                        </div>
-                                      </mdb-carousel-item>
-                                      <mdb-carousel-item>
-                                        <div class="card deal-card">
-                                            <div class="row">
-                                                <div class="col-4">
-                                                    
-                                                    <img class="deal-img card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="" height="100%" width="100%">
-                                                </div>
-                                    
-                                                <div class="col-8 pl-3">
-                                                    
-                                                    <div class="card-body">
-                                    
-                                                        
-                                                        <h2 class="card-title"><strong>Darjeeling City Tour</strong></h2>
-                                                        
-                                                        <hr class="px-3 py-0 ml-0" style="width:60px; border-top: 1px solid deeppink;">
-                                                        <div class="card-text mt-0 pt-0 black-text">
-                                                        
-                                                            <div><i class="far fa-calendar-alt"></i> 4 days tour</div>
-                                                            <div>Choose your guide from 8+ local guides</div>
-                                    
-                                                        </div>
-                                                        
-                                    
-                                                    </div>
-                                                </div>
-                                            </div>
-                                    
-                                            <!-- <a href="https://mdbootstrap.com/education/bootstrap/quick-start/" class="stretched-link text-right  pb-0 mb-3 px-3 text-decoration-none"><strong>Know More</strong></a> -->
-                                    
                                         </div>
                                       </mdb-carousel-item>
                                     </div>
