--- a/src/app/modules/guide/pages/guide-home/guide-home.component.html
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.html
@@ -38,6 +38,12 @@
 
 <div class="row d-block d-lg-none">
     <div class="col-12">
+      <div *ngIf="ShowLoadingIndicator" class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
         <router-outlet></router-outlet>
     </div>
 </div>
