--- a/src/app/modules/tourists/pages/tourists-home/tourists-home.component.html
+++ b/src/app/modules/tourists/pages/tourists-home/tourists-home.component.html
@@ -33,6 +33,12 @@
         <div class="row" style="margin: 40px 10px;">
             <div class="col-md-12" style="padding: 0;" >
                 <div class="tab-content" id="myTabContent">
+                  <div *ngIf="ShowLoadingIndicator" class="loader">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                  </div>
                     <router-outlet ></router-outlet>
                 </div>
             </div>
